:bug: Fix: page overflow
the page overflow on the x asis due to unset box-sizing property

--- a/src/_reset.sass
+++ b/src/_reset.sass
@@ -1,9 +1,12 @@
 //  module: Reset
 //  -----
 //  Clear all wikidot preset style
-//  Code from scp basalt theme
+//  Part of the code from scp basalt theme
 
 @use 'variables' as *
+
+*
+	box-sizing: border-box
 
 html
 	font-size: $rootFontSize
